# botfeeder

./: .gitignore  LICENSE  PRICING-CHANGELOG.md  README.md  THESIS.md  pyproject.toml
deploy/: Caddyfile  feedface-heartbeat.service  feedface-heartbeat.timer  feedface-hf-mirror.service  feedface-hf-mirror.timer  feedface-producer.service  feedface-producer.timer  feedface-server.service  feedface.env.example  server.json
docs/: 02-architecture.md  03-product-edgar-form4.md  04-data-sources.md  07-storefront-and-claims.md  09-watch-retainer.md  13-signal-mapping.md
producer/: __init__.py  edgar.py  main.py  parser.py  runner.py  signals.py  tickermap.py  watch_loop.py  writer.py
producer/sources/: __init__.py  bis_entity_list.py  census_trade.py  cftc_cot.py  dol_h1b.py  eurostat.py  fcc_uls_auctions.py  fdic_financials.py  form_13f.py  form_8k.py  form_d.py  fred.py  house_ptr.py  marinecadastre_ais.py  openfda_drugsfda.py  (+3 more)
scripts/: export_hf_mirror.py  heartbeat_buy.py
server/: __init__.py  app.py  ethos.py  mcp_server.py  payments.py  volume_report.py  volume_store.py  watch.py  watch_delivery.py  watch_store.py
tests/: test_bis_entity_list.py  test_census_trade.py  test_compute_saved.py  test_ethos.py  test_fred.py  test_free_promo.py  test_mcp_server.py  test_parser.py  test_parser_hardening.py  test_server.py  test_signals.py  test_signals_api.py  test_sources_bulkfile.py  test_sources_edgar_group.py  test_sources_govapis.py  test_sources_house_ptr.py  test_sources_macro.py  test_storefront_claims.py  test_watch.py  test_watch_routes.py
web/: index.html
(+25 files in other folders)
