[project]
name = "feedface"
version = "0.1.0"
description = "The Junkyard — machine-readable public-domain data for AI agents over x402"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pyarrow>=16.0",
  # official Coinbase x402: evm = settlement, fastapi = transport, extensions = Bazaar discovery
  # (extensions pulls jsonschema; without it, building a discovery-tagged 402 raises ImportError).
  "x402[evm,fastapi,extensions]>=2.14",
  # Form 4 XML has no namespaces -> stdlib xml.etree is enough; no lxml needed.
  # eth-account is NOT a runtime dep — wallet generation is a one-time offline admin task.
  # Default: coinbase/x402 FastAPI middleware; fallback: fastapi-x402.
  # Left out here so Phase 1 (producer) installs cleanly without it. See docs/05 §x402.
  "openpyxl>=3.1.5",
  "cdp-sdk>=1.47.1",
  "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["producer", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
